--- a/index.html
+++ b/index.html
@@ -66,31 +66,31 @@
 <section>
     <h2>Наша команда</h2>
     <ul>
-        <li><img src="images\img_Igor.jpg"
+        <li><img src="C:\Users\User\Desktop\Репозиторий\goit-markup-hw-01\images\img_Igor.jpg"
             alt="ігор "
             width="270"
             >
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
         </li>
-        <li><img src="images\img_olga.jpg"
+        <li><img src="C:\Users\User\Desktop\Репозиторий\goit-markup-hw-01\images\img_olga.jpg"
             alt="ольга"
             width="270"
             >
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
         </li>
-        <li><img src="images\img_mikola.jpg"
+        <li><img src="C:\Users\User\Desktop\Репозиторий\goit-markup-hw-01\images\img_mikola.jpg"
             alt="микола"
             width="270"
             >
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
         </li>
-        <li><img src="images\img_mihaylo.jpg"
+        <li><img src="C:\Users\User\Desktop\Репозиторий\goit-markup-hw-01\images\img_mihaylo.jpg"
             alt="михайло"
             width="270"
-            heigt="260">
+            >
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
         </li>
