--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
    <main>
     <section>   <div><h1>Ефективні рішення для <br> вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <button type="button">Замовити послугу</button></div>
             </section>
             <ul>
                 <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -38,7 +38,7 @@
     <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
    <p>Значимість цих проблем настільки<br> очевидна, що реалізація планових<br> завдань.</p></li>
 </ul>
-</div>
+
 
     <h2> Чим ми займаємося></h2>
     <ul>
