--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       </nav>
 
       <ul>
-        <li><a href="">mailto:info@devstudio.com</a></li>
-        <li><a href="">tel:096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:0961111111"></a>0961111111</li>
       </ul>
     </header>
 
@@ -115,8 +115,8 @@
 
       <address>
         м. Київ, пр-т Лесі Українки, 26
-        <a href="">mailto:info@devstudio.com</a>
-        <a href="">tel:+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+380961111111</a>
       </address>
     </footer>
   </body>
